--- a/index.html
+++ b/index.html
@@ -15,12 +15,25 @@
         <a href="#" class="logo">Raiyan.</a>
 
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="#" class="active">Home</a>
             <a href="#">About</a>
             <a href="#">Portfolio</a>
             <a href="#">Hall Of Friends</a>
             <a href="#">Contact</a>
         </nav>
     </header>
+
+    <section class="home">
+        <div class="home-content">
+            <h1>Hi, I'm Raiyan</h1>
+            <h3>Full Stack Developer</h3>
+            <p>Currently I'm studying Computer Science & Engineering at UC Davis. I have been programming as a hobby for 5 years. I enjoy making scripts for a variety of games including Minecraft, Space Engineers, and Dyson Sphere Program. I've also messed around with making simulations in C++, such as making a perfectly elastic collision simulation, particle generator, planatery orbits simulation, etc.</p>
+            <div class="btn-box">
+                <a href="#">Hire Me</a>
+                <a href="#">Let's Talk</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
