--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website HTML CSS Only Raiyan</title>
+    <title>Raiyan's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,13 +25,19 @@
 
     <section class="home">
         <div class="home-content">
-            <h1>Hi, I'm Raiyan</h1>
+            <h1>Ahmed Sazid Raiyan</h1>
             <h3>Full Stack Developer</h3>
-            <p>Currently I'm studying Computer Science & Engineering at UC Davis. I have been programming as a hobby for 5 years. I enjoy making scripts for a variety of games including Minecraft, Space Engineers, and Dyson Sphere Program. I've also messed around with making simulations in C++, such as making a perfectly elastic collision simulation, particle generator, planatery orbits simulation, etc.</p>
+            <p>I'm currently studying Computer Science & Engineering at UC Davis. I have been programming as a hobby for 5 years. I enjoy making scripts for a variety of games including Minecraft, Space Engineers, and Dyson Sphere Program. I've also messed around with making simulations in C++, such as making a perfectly elastic collision simulation, particle generator, planatery orbits simulation, etc.</p>
             <div class="btn-box">
                 <a href="#">Hire Me</a>
                 <a href="#">Let's Talk</a>
             </div>
+        </div>
+
+        <div class="home-sci">
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
         </div>
     </section>
 
