--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raiyan's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -35,10 +36,12 @@
         </div>
 
         <div class="home-sci">
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="https://www.instagram.com/raiyan01010010/"><i class='bx bxl-instagram'></i></a>
+            <a href="https://discord.com/users/187712785491296256"><i class='bx bxl-discord'></i></a>
         </div>
+
+        <span class="home-imgHover">
+        </span>
     </section>
 
 </body>
