--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             <a href="https://discord.com/users/187712785491296256"><i class='bx bxl-discord'></i></a>
         </div>
 
-        <span class="home-imgHover">
-        </span>
+        <span class="home-imgHover"></span>
+        <div class="imgProp">
+            <img src="ProfilePic1.jpg">
+        </div>
     </section>
 
 </body>
