added about page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <nav class="navbar">
             <a href="#" class="active">Home</a>
-            <a href="#">About</a>
+            <a href="./about.html">About</a>
             <a href="https://araiyan.github.io/Moving-Youtube-Player/">Portfolio</a>
             <a href="#">Hall Of Friends</a>
             <a href="#">Contact</a>
