added new style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
+<div class="imgProp">
+    <img src="ProfilePic1.jpg" draggable="false">
+</div>
+
 <body>
 
     <header class="header">
@@ -41,9 +45,7 @@
         </div>
 
         <!-- <span class="home-imgHover"></span> -->
-        <div class="imgProp">
-            <img src="ProfilePic1.jpg">
-        </div>
+        
     </section>
     
 
