initialized portfolio section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo">Raiyan.</a>
+        <a href="./" class="logo">Raiyan.</a>
 
         <nav class="navbar">
             <a href="#home">Home</a>
@@ -54,12 +54,23 @@
 
     <section class="about" id="about">
         <div class="about-content">
-            <h1>About</h1>
+            <h1 class="heading">About</h1>
             <p>Having spent the majority of my life in Bangladesh, my journey took a significant turn when I moved to the United States at the age of 12. Transitioning into a new environment, I enrolled in middle school and began to explore my passion for software engineering. Even at a young age, I was certain that my future lay in this field. As I entered high school, I eagerly pursued programming as a hobby, dedicating myself to honing my skills. After approximately three years of programming experience, I took the initiative to establish my own coding club, where I shared my knowledge and taught my fellow classmates the intricacies of Java programming.</p>
             <p>After completing AP Physics in high school, my fascination with physics led me to delve into creating my first physics simulation, specifically focusing on perfectly elastic collisions. During this time, I discovered a game called Space Engineers, which further intensified my interest in the subject. Intrigued by its possibilities, I decided to develop a script for inventory management and delve into the world of code documentation and how to decypher them. This marked my initial foray into game scripting, as I successfully created an inventory management script for Space Engineers. As Minecraft gained popularity, I seized the opportunity to explore its potential as well. I developed a Minecraft plugin that enabled cows to float and explode upon the use of a wand. This project allowed me to grasp the concept of vectors and utilize them to precisely control the cow's floating trajectory.</p>
+            <p>I only recently developed my interest in front end and have been making a few projects to showcase my talent in frontent. This portfolio website is my first project using HTML and CSS to animate a web page, but this will not be my last and I hope to continue my interest in frontend by making more fun and exciting projects.</p>
         </div>
     </section>
     
+    <!-- Portfolio Section Design -->
+
+    <section class="portfolio" id="portfolio">
+        <h1 class="heading">Projects</h1>
+
+        <div class="portfolio-project">
+            <img src="Images/Project1.jpg">
+            
+        </div>
+    </section>
 
 </body>
 </html>
