added project links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="https://araiyan.github.io/Moving-Youtube-Player/">Portfolio</a>
+            <a href="#portfolio">Portfolio</a>
             <a href="#">Hall Of Friends</a>
             <a href="#">Contact</a>
         </nav>
@@ -34,7 +34,7 @@
         <div class="home-content">
             <h1>Ahmed Sazid Raiyan</h1>
             <h3>Full Stack Developer</h3>
-            <p>I'm currently studying Computer Science & Engineering at UC Davis. I have been programming as a hobby for 5 years. I enjoy making scripts for a variety of games including Minecraft, Space Engineers, and Dyson Sphere Program. I've also messed around with making simulations in C++, such as making a perfectly elastic collision simulation, particle generator, planatery orbits simulation, etc.</p>
+            <p>I'm currently studying Computer Science & Engineering at UC Davis. I have been programming as a hobby for 5 years. I enjoy making scripts for a variety of games including Minecraft, Space Engineers, and Dyson Sphere Program. I've also messed around with making simulations in C++, such as making a perfectly elastic collision simulation, particle generator, planetary orbits simulation, etc.</p>
             <div class="btn-box">
                 <a href="Documents/Raiyan_Ahmed_Resume.pdf">Download Resume</a>
             </div>
@@ -76,28 +76,45 @@
             </div>
 
             <div class="portfolio-project">
-                <h2>Financial Tracker App</h2>
-                <img src="Images/Project2.jpg">
+                <a href="https://github.com/araiyan/Financial-Tracker-App">
+                    <h2>Financial Tracker App</h2>
+                    <img src="Images/Project2.jpg">
+                </a>
             </div>
+
             <div class="portfolio-project">
-                <h2>Financial Tracker App</h2>
-                <img src="Images/Project2.jpg">
+                <a href="https://github.com/araiyan/First-Dimension-Perfectly-Elastic-Collision">
+                    <h2>Perfectly Elastic Collision</h2>
+                    <img src="Images/Project2.jpg">
+                </a>
             </div>
+
             <div class="portfolio-project">
-                <h2>Financial Tracker App</h2>
-                <img src="Images/Project2.jpg">
+                <a href="https://github.com/araiyan/Space-Engineers-Inverntory-Management-Script">
+                    <h2>Inventory Management</h2>
+                    <img src="Images/Project2.jpg">
+                </a>
             </div>
+
             <div class="portfolio-project">
-                <h2>Financial Tracker App</h2>
-                <img src="Images/Project2.jpg">
+                <a href="https://github.com/araiyan/Matrix-Graph">
+                    <h2>Matrix Graph</h2>
+                    <img src="Images/Project2.jpg">
+                </a>
             </div>
+
             <div class="portfolio-project">
-                <h2>Financial Tracker App</h2>
-                <img src="Images/Project2.jpg">
+                <a href="https://github.com/araiyan/Nodes-With-Threads">
+                    <h2>Nodes With Threads</h2>
+                    <img src="Images/Project2.jpg">
+                </a>
             </div>
+
         </div>
         
     </section>
+
+    <!-- Contact Section Design -->
 
 </body>
 </html>
