added project images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#">Hall Of Friends</a>
             <a href="#">Contact</a>
         </nav>
     </header>
@@ -71,14 +70,14 @@
             <div class="portfolio-project">
                 <a href="https://araiyan.github.io/Moving-Youtube-Player/">
                     <h2>Moving Youtube Player</h2>
-                    <img src="Images/Project1.jpg">
+                    <img src="Images/MovingYoutubePlayer.jpg">
                 </a>
             </div>
 
             <div class="portfolio-project">
                 <a href="https://github.com/araiyan/Financial-Tracker-App">
                     <h2>Financial Tracker App</h2>
-                    <img src="Images/Project2.jpg">
+                    <img src="Images/FinancialTrackerApp.jpg">
                 </a>
             </div>
 
@@ -92,7 +91,7 @@
             <div class="portfolio-project">
                 <a href="https://github.com/araiyan/Space-Engineers-Inverntory-Management-Script">
                     <h2>Inventory Management</h2>
-                    <img src="Images/Project2.jpg">
+                    <img src="Images/InventoryManagementScript.png">
                 </a>
             </div>
 
