added project images

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="portfolio-project">
                 <a href="https://github.com/araiyan/First-Dimension-Perfectly-Elastic-Collision">
                     <h2>Perfectly Elastic Collision</h2>
-                    <img src="Images/Project2.jpg">
+                    <img src="Images/CollisionSimulation.jpg">
                 </a>
             </div>
 
