--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -42,6 +42,7 @@
         <div class="home-sci">
             <a href="https://www.instagram.com/raiyan01010010/"><i class='bx bxl-instagram'></i></a>
             <a href="https://discord.com/users/187712785491296256"><i class='bx bxl-discord'></i></a>
+            <a href="https://www.linkedin.com/in/ahmed-raiyan-3b374b101/"><i class='bx bxl-linkedin'></i></a>
         </div>
 
         <!-- <span class="home-imgHover"></span> -->
@@ -114,6 +115,25 @@
     </section>
 
     <!-- Contact Section Design -->
+    <section class="contact" id="contact">
+        <h1 class="heading">Contact Me!</h1>
+
+        <div class="contact-box">
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email Address">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Mobile Number">
+                    <input type="text" placeholder="Email Subject">
+                </div>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </form>
+        </div>
+        
+    </section>
 
 </body>
 </html>
